@@ -1,3 +1,9 @@
+2008-07-02  Martin Lambers <marlam@marlam.de>
+
+	* cvl/glsl/misc/sort.glsl, cvl/glsl/misc/resize_seq.glsl: Provide our
+	own implementation of round(), since not all driver versions have it
+	builtin.
+
 2008-06-30  Martin Lambers <marlam@marlam.de>
 
 	* cvl/glsl/color/hsl_to_rgb.glsl, cvl/glsl/color/rgb_to_hsl.glsl,
